Update code to be sonar compliant