@@ -19,7 +19,6 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Tries to authorize a user, based on the Bearer token (JWT) from
@@ -80,7 +79,7 @@ public class JwtAuthorizationFilter extends BasicAuthenticationFilter {
 		var authorities = ((List<?>) parsedToken.getBody().get("role"))
 				.stream()
 				.map(authority -> new SimpleGrantedAuthority((String) authority))
-				.collect(Collectors.toList());
+				.toList();
 
 		if (username.isEmpty())
 			return null;
